--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,22 @@
 @import url(/css/team.css);
 @import url(/css/style.css);
+@import url(/css/nav.css);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-family: "Futura PT", sans-serif;
+}
