--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,57 @@
 :root {
-  --holdkant: 0 9%;
+  --holdkant: 0 6%;
 }
 
 header {
   background-color: #22175b;
   color: white;
+  background-image: url(/assets/bagg.png);
 }
-
+.boxbutton {
+  padding: 15px 48px;
+  background-color: #1574f6;
+  font-weight: 600;
+  color: white;
+  text-transform: uppercase;
+  box-shadow: rgba(0, 0, 0, 0.226) 0px 4px 8px,
+    rgba(0, 0, 0, 0.055) 0px 14px 26px -6px, rgb(7, 82, 180) -3px -4px 0px inset;
+}
 header h1 {
   font-size: 150px;
+  line-height: 130px;
+  margin-bottom: 20px;
+}
+.header-content {
+  padding: 3% 6%;
+  display: flex;
+}
+.header-content p {
+  margin-bottom: 50px;
+  font-size: 22px;
+  max-width: 90%;
+  font-weight: 400;
+  color: white;
+}
+.header-right img {
+  width: 500px;
+}
+.header-right {
+  max-width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header-left {
+  max-width: 61%;
+}
+.top-pic {
+  position: relative;
+}
+.bottompic {
+  position: absolute;
+  bottom: 0;
+  right: -270px;
+}
+.bottompic img {
+  width: 400px;
 }
